fix(frontend): dark mode background

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -26,23 +26,6 @@
   /* dark mode lighter grey card */
 }
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
 /*----------------------------------Dark mode----------------------------------*/
 body {
   color: #222;
@@ -51,7 +34,7 @@ body {
 /*Changes background*/
 @media (prefers-color-scheme: dark) {
   body {
-    background:var(--dark-grey);
+    background: #202124;
   }
 
   /* Change colour of podcast search bar placeholder text to white on dark mode */
